--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "phonebook backend using node and express",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,7 +19,9 @@
   },
   "homepage": "https://github.com/Dr-Dap/Phonebook-BE#readme",
   "dependencies": {
-    "express": "^4.17.1",
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.7"
   }
 }
